--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.navbar {
+  outline: solid 10px palegreen;
+  width: 90%;
+  margin: auto;
+
+}
